# RealTimeDectectVer0.3

./: CMakeLists.txt  README.md  config.ini
include/: ConfigLoader.hpp  GpuDecoder.hpp  NvCodecUtils.h  ResultDrawer.hpp  cu_kernels.h
src/: ConfigLoader.cpp  GpuDecoder.cpp  NvDecoder.cpp  ResultDrawer.cpp  cu_kernels.cu  main.cpp
